<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.game.study.StudyResultFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResultsStudyResultFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/text_results"
                android:textAlignment="center"
                android:textColor="@color/davys_gray"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/results_layout_background"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/cont_calendar"
                    android:src="@drawable/ic_calendar" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cont_dot"
                    android:src="@drawable/ic_dot_white" />

                <TextView
                    android:id="@+id/tvDateStudyResultFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_date"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/results_layout_background"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/cont_clock"
                    android:src="@drawable/ic_clock" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cont_dot"
                    android:src="@drawable/ic_dot_white" />

                <TextView
                    android:id="@+id/tvSpentTimeStudyResultFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_spent_time"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/results_layout_background"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/cont_flashcards"
                    android:src="@drawable/ic_flashcards" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cont_dot"
                    android:src="@drawable/ic_dot_white" />

                <TextView
                    android:id="@+id/tvUsedFlashcardsStudyResultFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_used_flashcards"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/results_layout_background"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/cont_decks"
                    android:src="@drawable/ic_decks" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cont_dot"
                    android:src="@drawable/ic_dot_white" />

                <TextView
                    android:id="@+id/tvUsedDecksStudyResultFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_used_decks"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="65dp"
                android:background="@drawable/results_layout_background"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/cont_marked"
                    android:src="@drawable/ic_marked_white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cont_dot"
                    android:src="@drawable/ic_dot_white" />

                <TextView
                    android:id="@+id/tvMarkedFlashcardsStudyResultFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/placeholder_marked_flashcards"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btNavtoHomeStudyResultFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp">

                <ImageView
                    android:id="@+id/ivArrowHomeLeftStudyResultFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cont_desc_nav_arrow"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:id="@+id/tvHomeStudyResultFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:includeFontPadding="false"
                    android:text="@string/text_home"
                    android:textColor="@color/davys_gray"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>