<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.game.quiz.QuizGameFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_timer"
                android:src="@drawable/ic_timer" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_dot"
                android:paddingStart="9dp"
                android:paddingEnd="9dp"
                android:src="@drawable/ic_dot_gray" />

            <Chronometer
                android:id="@+id/cmTimerQuizGameFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:text="@string/placeholder_timer"
                android:textColor="@color/davys_gray"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProgressQuizGameFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:text="@string/placeholder_progress"
                android:textColor="@color/davys_gray"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_dot"
                android:paddingStart="9dp"
                android:paddingEnd="9dp"
                android:src="@drawable/ic_dot_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_timer"
                android:src="@drawable/ic_progress" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:layout_weight="1"
        android:background="@color/divider_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/rgQuizGameFrag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/anti_flash_white_bg"
            android:minHeight="200dp"
            android:orientation="horizontal"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/rgQuizGameFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TextView
                android:id="@+id/tvExplanationFlashcardQuizGameFrag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/placeholder_explanation_flashcard"
                android:textColor="@color/davys_gray"
                android:textSize="23sp" />
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/rgQuizGameFrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/rbAnswer1QuizGameFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_radio_button_answers"
            android:button="@android:color/transparent"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/placeholder_answer1"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_button_text"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbAnswer2QuizGameFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_radio_button_answers"
            android:button="@android:color/transparent"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/placeholder_answer2"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_button_text"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbAnswer3QuizGameFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_radio_button_answers"
            android:button="@android:color/transparent"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/placeholder_answer3"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_button_text"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbAnswer4QuizGameFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_radio_button_answers"
            android:button="@android:color/transparent"
            android:fontFamily="@font/comfortaa_bold"
            android:includeFontPadding="false"
            android:minHeight="0dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/placeholder_answer4"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_button_text"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/lvPreviousQuizGameFrag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="invisible"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_previous_study"
                android:paddingStart="20dp"
                android:src="@drawable/ic_triangle_arrow_left"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingStart="5dp"
                android:text="@string/text_previous"
                android:textColor="@color/davys_gray"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lvNextQuizGameFrag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:includeFontPadding="false"
                android:paddingEnd="5dp"
                android:text="@string/text_next"
                android:textColor="@color/davys_gray"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cont_next_study"
                android:paddingEnd="20dp"
                android:src="@drawable/ic_triangle_arrow_right"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:layout_weight="1"
        android:background="@color/divider_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <Button
        android:id="@+id/btFinishQuizGameFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/davys_gray"
        android:fontFamily="@font/comfortaa_bold"
        android:includeFontPadding="false"
        android:paddingBottom="3dp"
        android:text="@string/button_finish"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>